# Stellar-iPredict

./: .gitignore  README.md  iPredict-Project-Structure.md  ipredict.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/ipredict_token/: Cargo.toml
contracts/ipredict_token/src/: lib.rs  tests.rs
contracts/leaderboard/src/: lib.rs  tests.rs
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs  tests.rs
contracts/referral_registry/: Cargo.toml
contracts/referral_registry/src/: lib.rs  tests.rs
contracts/referral_registry/test_snapshots/tests/: test_credit_no_referrer.1.json  test_credit_unregistered_user.1.json  test_credit_with_referrer.1.json  test_display_name.1.json  test_double_init_rejected.1.json  test_earnings_accumulation.1.json  test_referral_count_tracking.1.json  test_referrer_bonus_points_accumulate.1.json  test_register_no_referrer.1.json  test_register_with_referrer.1.json  test_reject_double_registration.1.json  test_reject_self_referral.1.json  test_welcome_bonus.1.json
docs/: ARCHITECTURE.md  DEPLOYMENT-GUIDE.md  ITERATION-LOG.md  USER-FEEDBACK.md
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/__tests__/: helpers.test.ts  leaderboard.test.ts  market.test.ts
frontend/src/app/: LiveStats.tsx  layout.tsx  page.tsx
frontend/src/config/: network.ts
frontend/src/hooks/: useBet.ts  useClaim.ts  useMarkets.ts  useWallet.tsx
frontend/src/services/: leaderboard.ts  market.ts  referral.ts  soroban.ts  token.ts
frontend/src/types/: index.ts
(+76 files in other folders)
